<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F3F97"
    android:backgroundTint="#03A9F4"
    tools:context=".EnteryActivity">

    <Button
        android:id="@+id/report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/report_bugs_feedback_suggestions" />

    <EditText
        android:id="@+id/roomid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report"
        android:layout_marginTop="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/enter_room_id" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roomid"
        android:layout_centerHorizontal="true"
        android:text="@string/enter" />


    <Button
        android:id="@+id/showall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/show_all_answers"
        />

    <EditText
        android:id="@+id/single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/showall"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/single_question"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        />
    <Button
        android:id="@+id/singlebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_this"
        android:layout_below="@+id/single"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>