<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:id="@+id/select"
        />
    <ImageView
        android:id="@+id/viewImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/textt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_will_be_displayed_here"
        android:layout_marginTop="280dp"
         />

    <Button
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>